--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1414,3 +1414,19 @@ keywords = {variance estimation, spectral analysis, simulation, confidence inter
   number = {2}
 }
 
+
+@article{Bochkina2007,
+  title = {Tail {{Posterior Probability}} for {{Inference}} in {{Pairwise}} and {{Multiclass Gene Expression Data}}},
+  author = {Bochkina, N. and Richardson, S.},
+  year = {2007},
+  month = dec,
+  volume = {63},
+  pages = {1117--1125},
+  issn = {0006341X},
+  doi = {10.1111/j.1541-0420.2007.00807.x},
+  abstract = {We consider the problem of identifying differentially expressed genes in microarray data in a Bayesian framework with a noninformative prior distribution on the parameter quantifying differential expression. We introduce a new rule, tail posterior probability, based on the posterior distribution of the standardized difference, to identify genes differentially expressed between two conditions, and we derive a frequentist estimator of the false discovery rate associated with this rule. We compare it to other Bayesian rules in the considered settings. We show how the tail posterior probability can be extended to testing a compound null hypothesis against a class of specific alternatives in multiclass data.},
+  file = {/home/alan/Zotero/storage/TGJB3W6K/Bochkina and Richardson - 2007 - Tail Posterior Probability for Inference in Pairwi.pdf},
+  journal = {Biometrics},
+  language = {en},
+  number = {4}
+}
